[package]
name = "wind_tunnel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
autobenches = false

[dependencies]
invalidation.workspace = true

[dev-dependencies]
criterion = { default-features = false, features = [
    "cargo_bench_support",
], version = "0.5" }

[lints]
workspace = true

[[bench]]
name = "invalidation"
harness = false
