[package]
name = "invalidation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic invalidation primitives"
readme = "README.md"
keywords = ["invalidation", "incremental", "no_std"]
categories = ["algorithms", "data-structures"]

[dependencies]
hashbrown.workspace = true

[lints]
workspace = true

[features]
default = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = []
